@@ -1,12 +1,11 @@
 package TaskManager.TaskManager.Security;
-package TaskManager.TaskManager.Security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List; // Only need List import
+import java.util.Arrays;
 
 @Configuration
 public class CorsConfig {
@@ -14,14 +13,14 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-     
-        config.setAllowedOrigins(List.of(
-            "http://localhost:5173",                    // React dev server
-            "https://task-manager-frontend.onrender.com" // Your deployed frontend
+        
+        config.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173",
+            "https://task-manager-frontend.onrender.com"
         ));
         
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(false);
         config.setMaxAge(3600L);
         
